# Helios

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  camera.hpp  color.hpp  common.hpp  hittable_list.hpp  interval.hpp  is_hittable.hpp  main.cpp  material.hpp  ray.hpp  sphere.hpp  vector.hpp
images/: basic_sphere.ppm  colorwheel.ppm  sample.ppm  shaded_sphere.ppm  sky.ppm  sphere_on_ground.ppm
images/gamma_corrected/: 70_percent.ppm
src/: camera.hpp  color.hpp  common.hpp  hittable_list.hpp  is_hittable.hpp  ray.hpp
